[package]
name = "patch"
version = "0.7.0"
authors = ["phil <uniphil@gmail.com>"]
description = "Parse patches in the unified diff format"
repository = "https://github.com/uniphil/patch-rs"
readme = "README.md"
keywords = ["patch", "diff", "parse", "nom"]
license = "MIT"
edition = "2024"

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
chrono = "0.4.40"

[dev-dependencies]
pretty_assertions = "1.4.1"
